<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cellID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtv_main_cell"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edit_main_cell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Input your cell number"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtv_main_set"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edit_main_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Input set number"
                android:inputType="number"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Accuracy:"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_main_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_main_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="reset" />

            <Button
                android:id="@+id/btn_main_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_main_query" />

            <Button
                android:id="@+id/btn_main_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_main_learn" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtv_main_message"
            android:textColor="@android:color/black" />

        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/message_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:layout_alignBottom="@+id/LinearLayout1">


        <ImageView
            android:id="@+id/image_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:visibility="visible"
            app:srcCompat="@drawable/map" />

        <ImageView
            android:id="@+id/image_cell1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="69dp"
            android:layout_marginTop="110dp"
            app:srcCompat="@drawable/dot" />

        <ImageView
            android:id="@+id/image_cell2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="137dp"
            android:layout_marginTop="110dp"
            app:srcCompat="@drawable/dot" />

        <ImageView
            android:id="@+id/image_cell3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="208dp"
            android:layout_marginTop="110dp"
            app:srcCompat="@drawable/dot" />

        <ImageView
            android:id="@+id/image_cell4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="277dp"
            android:layout_marginTop="110dp"
            app:srcCompat="@drawable/dot" />

    </RelativeLayout>


</RelativeLayout>